--- a/XGameAppConsole/XGameAppConsole.csproj
+++ b/XGameAppConsole/XGameAppConsole.csproj
@@ -4,16 +4,17 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{E81FB631-13CB-4686-B219-261328F3B864}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>XGameContol.Domain</RootNamespace>
-    <AssemblyName>XGameContol.Domain</AssemblyName>
+    <ProjectGuid>{A32F2708-3211-49DE-88E5-91D9A6A89808}</ProjectGuid>
+    <OutputType>Exe</OutputType>
+    <RootNamespace>XGameAppConsole</RootNamespace>
+    <AssemblyName>XGameAppConsole</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -23,6 +24,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -174,32 +176,18 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Arguments\Jogador\AdicionarJogadorRequest.cs" />
-    <Compile Include="Arguments\Jogador\AdicionarJogadorResponse.cs" />
-    <Compile Include="Arguments\Jogador\AutenticarJogadorRequest.cs" />
-    <Compile Include="Arguments\Jogador\AutenticarJogadorResponse.cs" />
-    <Compile Include="Arguments\Plataforma\AdicionarPlataformaRequest.cs" />
-    <Compile Include="Arguments\Plataforma\AdicionarPlataformaResponse.cs" />
-    <Compile Include="Entities\Jogador.cs" />
-    <Compile Include="Entities\Jogo.cs" />
-    <Compile Include="Entities\JogoPlataforma.cs" />
-    <Compile Include="Entities\MeusJogos.cs" />
-    <Compile Include="Entities\Plataforma.cs" />
-    <Compile Include="Enums\EnumSituacaoJogador.cs" />
-    <Compile Include="Interfaces\Arguments\IResponse.cs" />
-    <Compile Include="Interfaces\Arguments\IRequest.cs" />
-    <Compile Include="Interfaces\Repositories\IRepositoryJogador.cs" />
-    <Compile Include="Interfaces\Services\IServiceJogador.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Interfaces\Services\IServicePlataforma.cs" />
-    <Compile Include="ServicesMaster\ServiceJogador.cs" />
-    <Compile Include="ValueObjects\Email.cs" />
-    <Compile Include="ValueObjects\Nome.cs" />
   </ItemGroup>
-  <ItemGroup />
   <ItemGroup>
-    <None Include="Diagrams\XgameDiagram.cd" />
+    <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\XGameContol.Domain\XGameContol.Domain.csproj">
+      <Project>{e81fb631-13cb-4686-b219-261328f3b864}</Project>
+      <Name>XGameContol.Domain</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
