--- a/XGameContol.Domain/XGameContol.Domain.csproj
+++ b/XGameContol.Domain/XGameContol.Domain.csproj
@@ -186,6 +186,7 @@
     <Compile Include="Entities\MeusJogos.cs" />
     <Compile Include="Entities\Plataforma.cs" />
     <Compile Include="Enums\EnumSituacaoJogador.cs" />
+    <Compile Include="Extensions\StringExtension.cs" />
     <Compile Include="Interfaces\Arguments\IResponse.cs" />
     <Compile Include="Interfaces\Arguments\IRequest.cs" />
     <Compile Include="Interfaces\Repositories\IRepositoryJogador.cs" />
